--- a/css/default.css
+++ b/css/default.css
@@ -1,6 +1,7 @@
 body {
     font-family: Consolas;
+    font-size: 14px;
     height: 100vh;
     background: rgb(255,255,255);
-    background: linear-gradient(120deg, rgba(255,255,255,1) 0%, rgba(0,147,35,0.25) 100%);
+    background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(0,147,35,0.1) 100%);
 }
