--- a/css/default.css
+++ b/css/default.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Consolas;
+    font-family: monospace;
     font-size: 14px;
     height: 100vh;
     background: rgb(255,255,255);
