index complete - height gradient fix

--- a/css/default.css
+++ b/css/default.css
@@ -1,7 +1,13 @@
+html {
+    min-height: 100%;
+}
+
 body {
     font-family: monospace;
     font-size: 14px;
-    height: 100vh;
+    min-height: 100%;
     background: rgb(255,255,255);
     background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(0,147,35,0.1) 100%);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
