--- a/css/responsive_md.css
+++ b/css/responsive_md.css
@@ -14,7 +14,7 @@ header {
     height: 7vh;
     width: 768px;
     text-align: center;
-    margin: 0px auto;
+    margin: 0px auto 10px;
 }
 
 header > h1 {
@@ -28,6 +28,10 @@ nav {
     display: block;
     width: 100%;
     margin: 8px auto;
+}
+
+section > h1 {
+    margin: 25px 1px 1px 1px;
 }
 
 #dd-imgcontainer {
@@ -44,6 +48,7 @@ nav {
     border-style: solid;
     border-width: 1px;
     border-radius: 5px;
+    z-index: 0;
 }
 
 #dd-content a {
