--- a/css/responsive_sm.css
+++ b/css/responsive_sm.css
@@ -152,17 +152,20 @@ div.imgshowcase > h1 {
     border-color: black;
     margin: 5px auto;
     padding: 0px;
+    /* height: 40vh; */
     width: 95vw;
 }
 
 #imgfig figcaption {
     margin: 5px;
+    /* line-height: 250%; */
 }
 
 #imgfig img {
     text-align: center;
     display: block;
-    width: 100%;
+    min-width: 100%;
+    max-width: 100%;
 }
 
 #imgnav {
