--- a/css/responsive_md.css
+++ b/css/responsive_md.css
@@ -88,9 +88,15 @@ section.imgsection {
     text-align: center;
 }
 
-div.imgshowcase figure {
+div.imgshowcase #imgfig {
     max-width: 720px;
     margin: 20px auto;
+}
+
+#imgfigcaption {
+    display: block;
+    font-size: 110%;
+    margin: 0px auto 10px;
 }
 
 div.imgshowcase img {
