--- a/css/responsive_sm.css
+++ b/css/responsive_sm.css
@@ -192,6 +192,26 @@ div.imgshowcase {
     min-width: 95px;
 }
 
+#d3section {
+    text-align: center;
+}
+
+#canvasdiv {
+    text-align: center;
+    background-color: white;
+    border: solid 1px;
+    max-width: 720px;
+    max-height: 500px;
+    width: 92vw;
+    height: 75vh;
+    margin: 5px auto;
+}
+
+#maincanvas {
+    width: 100%;
+    height: 100%;
+}
+
 footer {
     width: 80%;
     font-size: 10px;
