--- a/css/responsive_sm.css
+++ b/css/responsive_sm.css
@@ -219,20 +219,10 @@ footer {
     margin: 25px auto;
 }
 
-.moveableEl {
-  cursor: move;
+.moveable {
+  cursor: grab;
 }
 
-/* :fullscreen {
-    max-width: none;
-    max-height: none;
-    width: 100%;
-    height: 100%;
-} */
-
-/* #imgfig:fullscreen {
-    max-width: none;
-    max-height: none;
-    width: 100%;
-    height: 100%;
-} */
+.moveable:active {
+  cursor: grabbing;
+}
