--- a/css/responsive_sm.css
+++ b/css/responsive_sm.css
@@ -95,7 +95,8 @@ section {
 
 section > h1 {
     font-family: 'Courier New', Courier, monospace;
-    font-style: italic;
+    font-size: 1.35rem;
+    font-style: normal;
     text-align: left;
 }
 
@@ -228,10 +229,11 @@ footer {
 }
 
 #publist li {
-    margin: 10px 0px 25px 0px;
+    margin: 10px 5px 25px 0px;
+    width: 95%
 }
 
-#publist div {
+.pubcat {
     display: inline-block;
     font-size: 85%;
     border: 1px;
