--- a/css/responsive_sm.css
+++ b/css/responsive_sm.css
@@ -220,14 +220,6 @@ footer {
     margin: 25px auto;
 }
 
-.moveable {
-  cursor: grab;
-}
-
-.moveable:active {
-  cursor: grabbing;
-}
-
 #publist li {
     margin: 10px 5px 25px 0px;
     width: 95%
@@ -241,4 +233,9 @@ footer {
     border-color: black;
     border-radius: 3.5px;
     padding: 1px;
+}
+
+.catbutton {
+    cursor: pointer;
+    margin: 2px 2px 2px 2px;
 }
