--- a/css/default.css
+++ b/css/default.css
@@ -10,7 +10,6 @@ html {
 body {
     font-family: monospace;
     font-size: 14px;
-    min-height: 100%;
     margin: 0px;
     padding: 0px;
     background: rgb(255,255,255);
@@ -18,6 +17,10 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    min-height: 100vh;
 }
 
 .main-container {
@@ -25,6 +28,9 @@ body {
     box-sizing: border-box;
     padding: 7px;
     margin: 0px;
-    min-height: 100vh;
+    flex: 1 0 auto;
 }
 
+footer {
+    flex-shrink: 0;
+}
